# DatosAbiertosMinCultura

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: deploy.yml
.streamlit/: config.toml
Datos/: Datos abiertos.xlsx  HISTORICO Estrenos Colombia.xlsx  HISTORICO Estrenos Total.xlsx  Salas de Cine Registradas y Activas.xlsx
Recursos/: Presentacion.pptx
app/: _ui.py  demo_datos_abiertos.py  streamlit_app.py
app/pages/: 1_Datos_Abiertos.py  2_Demanda_y_Brecha.py  3_Simulador_de_Exhibidor.py  4_Estacionalidad.py  5_Narrativa_IA.py
backend/: __init__.py  requirements.txt  run_pipeline.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/models/: __init__.py  catalog.py  data.py  demand.py  exhibitor.py  forecast.py  methodology.py  overview.py  trace.py
backend/app/pipeline/: __init__.py  anonymize.py  external.py  ingest.py  population.py  reconcile.py  text_utils.py
backend/app/services/: __init__.py  deepseek.py  nlquery.py
backend/data/interim/: catalog_manifest.json  profile_report.json  reconcile_report.json
backend/data/processed/: admisiones_municipio_anual.parquet  crosswalk_municipios.parquet  dim_complejos.parquet  dim_estrenos_colombia.parquet  dim_peliculas.parquet  fact_taquilla.parquet  serie_diaria_nacional.parquet
backend/scripts/: deep_inspect.py  export_static.py  generate_recursos.py  profile_excel.py
conf/: fuentes.yaml  params.yaml
data/reference/: README.md  divipola.csv
docs/: architecture.md  conclusiones.md  diccionario_datos.md  fuentes_datos.md  guia-uso.md  guion-demo.md  index.md  marco_metodologico.md  planteamiento_problema.md
docs/datos/: fuentes.md  modelo-datos.md
docs/modelo/: arquitectura.md
frontend/: angular.json  package-lock.json  package.json
frontend/public/api/: catalog.json  demand_pob_15_30.json  demand_pob_15_45.json  demand_pob_15_60.json  forecast.json  map_pob_15_30.json  map_pob_15_45.json  map_pob_15_60.json  methodology.json  municipios.json  overview.json  query_context.json
frontend/src/: styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
notebooks/: 01_exploracion_sirec.py
powerbi/: README.md  medidas.dax
scripts/: check_consumo.py  screenshot_app.py  screenshot_demo.py
src/cinepredict/: __init__.py  cli.py  config.py
tests/: test_accessibility.py  test_seasonality.py  test_territorial.py
(+38 files in other folders)
