[project]
name = "cinepredict"
version = "0.1.0"
description = "Modelo predictivo de espectadores de cine en Colombia (SIREC + DANE) — Concurso Datos al Ecosistema 2026, Reto 8 Cultura y Turismo"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Grupo de Producción y Gestión de la Información - DACMI, Ministerio de las Culturas" },
]
keywords = ["datos-abiertos", "cine", "forecasting", "colombia", "sirec", "mincultura"]

dependencies = [
    # --- Procesamiento y exploración ---
    "duckdb>=1.1",
    "polars>=1.9",
    "pandas>=2.2",
    "pyarrow>=17.0",
    # --- Geoespacial ---
    "geopandas>=1.0",
    "shapely>=2.0",
    "h3>=4.1",
    "osmnx>=2.0",
    "networkx>=3.3",
    # --- Validación de datos ---
    "pandera>=0.20",
    "great-expectations>=1.0",
    "ydata-profiling>=4.10",
    # --- Modelado: series de tiempo ---
    "statsforecast>=1.7",
    "prophet>=1.1",
    # --- Modelado: gradient boosting ---
    "lightgbm>=4.5",
    "catboost>=1.2",
    "scikit-learn>=1.5",
    "sktime>=0.33",
    # --- Optimización / experimentos / explicabilidad ---
    "optuna>=4.0",
    "mlflow>=2.16",
    "shap>=0.46",
    # --- Visualización / producto ---
    "streamlit>=1.39",
    "pydeck>=0.9",
    "folium>=0.17",
    "plotly>=5.24",
    # --- IA aplicada ---
    "anthropic>=0.40",
    # --- Utilidades ---
    "openpyxl>=3.1",        # lectura del anexo .xlsx del DANE
    "matplotlib>=3.8",      # figuras SHAP / reportes
    "sodapy>=2.2",          # cliente Socrata para datos.gov.co
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "typer>=0.12",
    "loguru>=0.7",
]

[project.optional-dependencies]
deep = [
    "neuralforecast>=1.7",  # Temporal Fusion Transformer (modelo avanzado)
    "torch>=2.4",
]
nlquery = [
    "vanna>=0.7",           # consultas en lenguaje natural (en evaluación)
]
dev = [
    "marimo>=0.9",
    "mkdocs-material>=9.5",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.11",
    "ipykernel>=6.29",
]

[project.scripts]
cinepredict = "cinepredict.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cinepredict"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
